fix: searchbar caused overlfow on smaller sizes

--- a/src/app/features/lineups/lineups-container/lineups-container.component.scss
+++ b/src/app/features/lineups/lineups-container/lineups-container.component.scss
@@ -66,7 +66,12 @@ ul {
   }
 }
 @media only screen and (max-width: 800px) {
+  .search-bar input {
+    max-width: 230px;
+  }
   .agents-container {
     grid-template-columns: 1fr;
+    max-width: 100vw;
+    padding: 1rem;
   }
 }
